map_editor polygon WIP

--- a/src/modules/scene/less/main.less
+++ b/src/modules/scene/less/main.less
@@ -34,7 +34,8 @@
 	}
 
 	> .sidebar {
-		width: 160px;
+		min-width: 160px;
+		right: 5px;
 		float: right;
 		z-index: 10;
 		pointer-events: none;
