working scene object

--- a/src/modules/scene/less/main.less
+++ b/src/modules/scene/less/main.less
@@ -135,8 +135,10 @@
     				top: 0px;
     				left: 0px;
     				cursor: default;
+    				margin: 0px;
+    				overflow: hidden;
 
-    				> .grid-tile {
+    				.grid-tile {
     					pointer-events: none;
     					display: inline-block;
     					vertical-align: top;
