--- a/src/less/library.less
+++ b/src/less/library.less
@@ -30,13 +30,29 @@ body{
     bottom: 0px;
     left: 0px;
     height: 100%;
-    background-color: @overlay-color;
+    background-color: transparent;
+    box-shadow: none;
     z-index: 20;
     overflow: auto;
     padding: @library-padding;
-    box-shadow: @card-shadow;
+    border-right: @overlay-color 1px solid;
 
     transition: all ease-in-out 0.2s;
+
+    * {
+		color: @overlay-color;
+		fill: @overlay-color;
+    }
+
+    &:hover {
+    	box-shadow: @card-shadow;
+    	border-right: none;
+
+    	* {
+    		color: black;
+    		fill: black;
+    	}
+    }
 
     >.ui-resizable-handle {
     	right: 0px;
